Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-1799

Oops: Kernel access of bad area with IPv6 address

XMLWordPrintable

    • 3
    • Orion
    • 4447

      IBM reported this kernel panic on their BGQ IO node when loading the ptlrpc module with an o2ib network. The IB interface had an IPv4 and IPv6 address. Removing the IPv6 address avoided the crash.

      {0}.1.0: Unable to handle kernel paging request for data at address 0x00000138
      {0}.1.0: Faulting instruction address: 0xc0000000002cb518
      {0}.1.0: Oops: Kernel access of bad area, sig: 11 [#1]
      {0}.1.0: SMP NR_CPUS=68 Blue Gene/Q
      {0}.1.0: Modules linked in: ko2iblnd(U) ptlrpc(+)(U) obdclass(U) lnet(U) lvfs(U) libcfs(U)
      {0}.1.0: NIP: c0000000002cb518 LR: 80000000035f82a8 CTR: c0000000002cb4fc
      {0}.1.0: REGS: c0000003e4c27290 TRAP: 0300   Not tainted  (2.6.32-220.23.3.bgq.el6_V1R1M2_0.ppc64)
      {0}.1.0: MSR: 0000000080029000 <EE,ME,CE>  CR: 24228480  XER: 20000000
      {0}.1.0: DEAR: 0000000000000138, ESR: 0000000000000000
      {0}.1.0: TASK = c0000003ec085b20[2170] 'modprobe' THREAD: c0000003e4c24000 CPU: 4
      {0}.1.0: GPR00: 80000000035f82a8 c0000003e4c27510 c0000000006bc1c0 0000000000000000
      {0}.1.0: GPR04: 0000000000000000 0000000000000000 c0000003ebdd0118 c000000002342408
      {0}.1.0: GPR08: 0000000000000001 0000000000000000 0000000000008000 c0000000002cb4fc
      {0}.1.0: GPR12: 8000000003612280 c000000000725900 0000000000000400 0000000000000730
      {0}.1.0: GPR16: 0000000000000000 8000000000dd24b8 0000000000000000 0000000000000010
      {0}.1.0: GPR20: 80000000007607c0 0000000000003590 8000000000754608 800000000361b050
      {0}.1.0: GPR24: c0000003efa99400 c0000003e4c27610 c0000003e4c27600 c0000003e4c27620
      {0}.1.0: GPR28: c0000003ebdd00c0 c0000003ebc60600 800000000362c568 0000000000000000
      {0}.1.0: NIP [c0000000002cb518] .ib_alloc_pd+0x1c/0x6c
      {0}.1.0: LR [80000000035f82a8] .kiblnd_dev_failover+0x228/0xc30 [ko2iblnd]
      {0}.1.0: Call Trace:
      {0}.1.0: [c0000003e4c27510] [c0000003e4c27670] 0xc0000003e4c27670 (unreliable)
      {0}.1.0: [c0000003e4c27590] [80000000035f82a8] .kiblnd_dev_failover+0x228/0xc30 [ko2iblnd]
      {0}.1.0: [c0000003e4c276f0] [80000000035f8e2c] .kiblnd_create_dev+0x17c/0x650 [ko2iblnd]
      {0}.1.0: [c0000003e4c277e0] [80000000035fff58] .kiblnd_startup+0x3a8/0x6e0 [ko2iblnd]
      {0}.1.0: [c0000003e4c278d0] [8000000000d962fc] .lnet_startup_lndnis+0x1bc/0xa50 [lnet]
      {0}.1.0: [c0000003e4c27a00] [8000000000d96d24] .LNetNIInit+0x194/0x2b0 [lnet]
      {0}.1.0: [c0000003e4c27ac0] [80000000031351e4] .ptlrpc_ni_init+0x84/0x260 [ptlrpc]
      {0}.1.0: [c0000003e4c27b80] [8000000003135794] .ptlrpc_init_portals+0x34/0x1c0 [ptlrpc]
      {0}.1.0: [c0000003e4c27c30] [80000000031825e8] .init_module+0x158/0x7dc8 [ptlrpc]
      {0}.1.0: [c0000003e4c27cd0] [c000000000000e74] .do_one_initcall+0x88/0x1bc
      {0}.1.0: [c0000003e4c27d80] [c00000000006c910] .SyS_init_module+0x11c/0x2b4
      {0}.1.0: [c0000003e4c27e30] [c000000000000580] syscall_exit+0x0/0x2c
      {0}.1.0: Instruction dump:
      {0}.1.0: 38210080 e8010010 ebe1fff8 7c0803a6 4e800020 7c0802a6 fbe1fff8 38800000
      {0}.1.0: 38a00000 7c7f1b78 f8010010 f821ff81 <e9230138> e8090000 f8410028 7c0903a6
      {0}.1.0: Kernel panic - not syncing: Fatal exception
      {0}.1.0: Call Trace:
      {0}.1.0: [c0000003e4c26fc0] [c000000000008190] .show_stack+0x7c/0x184 (unreliable)
      {0}.1.0: [c0000003e4c27070] [c000000000423614] .panic+0x80/0x1a8
      {0}.1.0: [c0000003e4c27100] [c000000000018d58] .die+0x1a4/0x1bc
      {0}.1.0: [c0000003e4c271a0] [c00000000001e9e0] .bad_page_fault+0xb8/0xd4
      {0}.1.0: [c0000003e4c27220] [c000000000013e4c] storage_fault_common+0x48/0x4c
      {0}.1.0: --- Exception: 300 at .ib_alloc_pd+0x1c/0x6c
      {0}.1.0:     LR = .kiblnd_dev_failover+0x228/0xc30 [ko2iblnd]
      {0}.1.0: [c0000003e4c27510] [c0000003e4c27670] 0xc0000003e4c27670 (unreliable)
      {0}.1.0: [c0000003e4c27590] [80000000035f82a8] .kiblnd_dev_failover+0x228/0xc30 [ko2iblnd]
      {0}.1.0: [c0000003e4c276f0] [80000000035f8e2c] .kiblnd_create_dev+0x17c/0x650 [ko2iblnd]
      {0}.1.0: [c0000003e4c277e0] [80000000035fff58] .kiblnd_startup+0x3a8/0x6e0 [ko2iblnd]
      {0}.1.0: [c0000003e4c278d0] [8000000000d962fc] .lnet_startup_lndnis+0x1bc/0xa50 [lnet]
      {0}.1.0: [c0000003e4c27a00] [8000000000d96d24] .LNetNIInit+0x194/0x2b0 [lnet]
      {0}.1.0: [c0000003e4c27ac0] [80000000031351e4] .ptlrpc_ni_init+0x84/0x260 [ptlrpc]
      {0}.1.0: [c0000003e4c27b80] [8000000003135794] .ptlrpc_init_portals+0x34/0x1c0 [ptlrpc]
      {0}.1.0: [c0000003e4c27c30] [80000000031825e8] .init_module+0x158/0x7dc8 [ptlrpc]
      {0}.1.0: [c0000003e4c27cd0] [c000000000000e74] .do_one_initcall+0x88/0x1bc
      {0}.1.0: [c0000003e4c27d80] [c00000000006c910] .SyS_init_module+0x11c/0x2b4
      {0}.1.0: [c0000003e4c27e30] [c000000000000580] syscall_exit+0x0/0x2c
      

            ashehata Amir Shehata (Inactive)
            nedbass Ned Bass (Inactive)
            Votes:
            1 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated: