LU-1799 o2iblnd: debug patch for o2iblnd

IBM reported kernel panic on their BGQ IO node when loading the
ptlrpc module with an o2ib network. The IB interface had an IPv4
and IPv6 address. Removing the IPv6 address avoided the crash.

I suspect rdma_bind_addr can't associate any RDMA device in this
case, this patch will check if there's attached IB device on cmid
even returned value is ZERO, it will also output more information.

Test-Parameters: nettypes=o2ib
Signed-off-by: Liang Zhen <liang@whamcloud.com>
Change-Id: Id44110fcf56b199b1504ab4e6b0157d87bc2d270
Reviewed-on: http://review.whamcloud.com/3815
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Isaac Huang <he.huang@intel.com>
Reviewed-by: Doug Oucharek <doug.s.oucharek@intel.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>